--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "path": "^0.12.7",
+    "sass": "^1.68.0",
+    "typescript-plugin-css-modules": "^5.0.1"
   }
 }
