--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "incremental": true,
     "plugins": [
       {
-        "name": "next"
-      }
+        "name": "next",
+      },
+      { "name": "typescript-plugin-css-modules" }
     ],
     "paths": {
       "@/*": ["./*"]
