--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "d3": "^7.8.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
