--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint:scss": "stylelint --ignore-path .gitignore '**/*.scss'"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "@toast-ui/react-editor": "^3.2.3",
     "@types/d3": "^7.4.0",
     "@types/lodash": "^4.14.198",
     "@types/node": "20.5.6",
@@ -21,6 +23,7 @@
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
+    "dayjs": "^1.11.10",
     "eslint-config-next": "13.4.19",
     "next": "^13.5.4",
     "postcss": "8.4.28",
@@ -32,7 +35,8 @@
     "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
