--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hotkeys-hook": "^4.4.1",
     "react-use": "^17.4.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
