--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "hooks/useRecoilPersistts"
   ],
   "exclude": [
     "node_modules"
