--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_FE_URL="/api/"
-NEXT_PUBLIC_BE_URL="/backend/api/"
+NEXT_PUBLIC_BE_URL="/backend/"
 NEXT_API_URL="http://localhost:8080/api"
