add invoice and expport to pdf via invoice add table header add breadcrumbs add support board

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_FE_URL="/api/"
 NEXT_PUBLIC_BE_URL="/backend/"
 NEXT_API_URL="http://localhost:8080/api"
+JUSO_API_KEY="devU01TX0FVVEgyMDIzMTEwMzE0NTM1OTExNDI0MDI="
