--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/d3": "^7.4.0",
+    "@types/jspdf": "^2.0.0",
     "@types/lodash": "^4.14.198",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
@@ -25,12 +26,14 @@
     "d3": "^7.8.5",
     "dayjs": "^1.11.10",
     "eslint-config-next": "13.4.19",
+    "jspdf": "^2.5.1",
     "next": "^13.5.4",
     "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hotkeys-hook": "^4.4.1",
+    "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
