add krw and pecent

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_API_URL=http://localhost:8080/api
 JUSO_API_KEY=devU01TX0FVVEgyMDIzMTEwMzE0NTM1OTExNDI0MDI=
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=jfhd6HOBeu622m0pkl9ROU4TCYc5CplNaLcKHvUaA+c=
+NEXTAUTH_BACKEND_URL=http://10.20.19.96:30006
