--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
     "dayjs": "^1.11.10",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.4",
     "jspdf": "^2.5.1",
-    "next": "^13.5.4",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "postcss": "8.4.28",
     "react": "^18.2.0",
