--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,7 @@
         "react/react-in-jsx-scope": "off",
         "react/prop-types": "off",
         "react-hooks/rules-of-hooks": "off", // Checks rules of Hooks
-        "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+        "react-hooks/exhaustive-deps": "off", // Checks effect dependencies
         "import/prefer-default-export": "off",
         "import/no-unresolved": "off",
         "no-restricted-exports": [
@@ -139,17 +139,14 @@
         "no-param-reassign": ["error", { "props": false }],
         "no-unused-expressions": ["warn"],
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": [
-            "warn",
-            { "argsIgnorePattern": "^_" }
-        ],
+        "@typescript-eslint/no-unused-vars": "off",
+        // [
+        //     "warn",
+        //     { "argsIgnorePattern": "^_" }
+        // ],
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": "off",
         "@typescript-eslint/camelcase": "off",
-        "@typescript-eslint/no-unused-vars": [
-            "warn",
-            { "argsIgnorePattern": "^_" }
-        ],
         "prefer-destructuring": ["error", { "object": true, "array": false }],
         "lines-between-class-members": "off",
         "jsx-a11y/click-events-have-key-events": "off",
