--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/cookie": "^0.6.0",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-transition-group": "^4.4.8",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
