--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:scss": "stylelint --ignore-path .gitignore '**/*.scss'"
+    "lint:scss": "stylelint --ignore-path .gitignore '**/*.scss'",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -50,6 +51,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.1.0",
     "@svgr/webpack": "^8.1.0",
     "@types/cookie": "^0.6.0",
     "@types/react-datepicker": "^4.19.5",
